@@ -1,4 +1,11 @@
-$Id: ChangeLog,v 1.7 2008-11-18 21:48:24 karl Exp $
+ChangeLog
+
+2009-07-17 karl
+    * Add aclocal.m4 to create a rule for finding the path to dtplite and
+      modify configure.in to use that rule.
+
+    * Alter Makefile.in to have rules for building the tcllauncher.n
+      manpage using dtplite based on the tcllauncher.man Tcl doctools file.
 
 2009-06-11 karl
     * Deploy pidfile_* and daemonize functions.
